compilateurMinCaml/tests/syntax/invalid/Not.ml
print_int (if (not ) then 101 else 203)